k8s-deployment/wishlist-db/manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: wishlist-app
  template:
    metadata:
      labels:
        component: wishlist-app
    spec:
      containers:
        - name: wishlist-app-container
          image: vagdevik/user-wishlist-k8s:v1
          ports:
          - containerPort: 80
