k8s-deployment/wishlist-db/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    component: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
